Added more pages

--- a/html/admin/new-categories.html
+++ b/html/admin/new-categories.html
@@ -16,7 +16,7 @@
          class="relative min-h-screen w-full bg-[var(--primary-color)]/75 flex items-center justify-center"
       >
          <!-- New Categories Modal Start -->
-         <section class="px-4 flex items-center justify-center">
+         <section class="p-4 flex items-center justify-center">
             <div class="bg-white py-8 px-6 rounded-md max-w-[410px]">
                <!-- Modal Header -->
                <div class="flex items-center gap-3 justify-between">
