--- a/html/auth-code.html
+++ b/html/auth-code.html
@@ -14,7 +14,7 @@
    <body>
       <!-- Header Section Start -->
       <header
-         class="sm:py-7 py-6 border-b border-b-[var(--primary-color)] sticky top-0"
+         class="sm:py-7 py-6 border-b border-b-[var(--primary-color)] sticky top-0 z-10 bg-[var(--screen-bg)]"
       >
          <nav
             class="flex items-center gap-5 justify-between max-w-7xl px-4 mx-auto"
