--- a/html/admin/categories.html
+++ b/html/admin/categories.html
@@ -150,7 +150,7 @@
                      </th>
                      <th scope="col">
                         <div
-                           class="bg-black text-left px-4 py-5 border border-black"
+                           class="bg-black text-left px-4 py-5 border border-black text-nowrap"
                         >
                            Featured Image
                         </div>
